refactor: PathPatternParser 매직넘버 상수화